Type and spacing fixes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@ body {
 
 nav ul, .article h2, #userbar, article h1 { font-family: "Karla", "Futura", sans-serif; }
 
-a { color: #4a9eed; }
+a { color: #1d91ff; }
 
 a:hover { color: #000000; }
 
